# cetatenie-scrapper

./: .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yml  docker-compose.yml  dosar.pkl  paths.pkl  pyproject.toml  res.json
alembic/: env.py
alembic/versions/: 109211855214_initial.py  4d960622fd50_set_nullable_true_to_pdfs_pdf_id.py
bubble_parser/: __init__.py  api.py  app_types.py  database.py  models.py  parser.py  repositories.py  types.py
docker/app/: Dockerfile
docker/postgres/init/: init-bubble-db.sh
docker/postgres/volume/pgdata/base/1/: 1259  2619  2619_vm  2696  2840  2841
docker/postgres/volume/pgdata/base/16384/: 1247  1249  1259  16385  16388  16391  16392_fsm  16392_vm  16396  16398  2224  2579  2604  2606  2608  2610  2619  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2696  2703  2704  2840  2840_fsm  2841  3455  5002  pg_internal.init
docker/postgres/volume/pgdata/global/: 1260  1262  2671  pg_control  pg_internal.init
docker/postgres/volume/pgdata/pg_stat/: pgstat.stat
docker/postgres/volume/pgdata/pg_xact/: 0000
tests/: server_receiver.py  test_api.py  test_repositories.py
tests/utils/: fill_database.py
